package com.devonfw.ide.gui.core.context;

import java.nio.file.Path;
import java.util.UUID;

import com.devonfw.ide.gui.core.progress.ProgressBarTask;
import com.devonfw.tools.ide.context.AbstractIdeContext;
import com.devonfw.tools.ide.context.IdeStartContextImpl;
import com.devonfw.tools.ide.io.IdeProgressBar;
import com.devonfw.tools.ide.process.OutputListener;
import com.devonfw.tools.ide.process.ProcessContext;

/**
 * Implementation of {@link AbstractIdeContext} for the IDEasy dashboard (GUI).
 */
public class IdeGuiContext extends AbstractIdeContext {

  private final TaskManager taskManager;

  private OutputListener outputListener;

  /**
   * The constructor.
   *
   * @param startContext the {@link IdeStartContextImpl}.
   * @param workingDirectory the optional {@link Path} to current working directory.
   * @param taskManager the {@link TaskManager} to manage tasks and progress bars in the GUI.
   */
  public IdeGuiContext(IdeStartContextImpl startContext, Path workingDirectory, TaskManager taskManager) {

    super(startContext, workingDirectory);
    this.taskManager = taskManager;
  }

  @Override
  protected String readLine() {

    return "";
  }

  @Override
  public IdeProgressBar newProgressBar(String title, long size, String unitName, long unitSize) {

    ProgressBarTask newTask = new ProgressBarTask(taskManager, UUID.randomUUID().toString(), title, size, unitName, unitSize);
    taskManager.addTask(newTask);

    return newTask;
  }

  /**
   * @param title the title of the progress bar
   * @return a progress bar implementation that is indeterminate
   */
  public IdeProgressBar newProgressBarIndeterminate(String title) {

    ProgressBarTask newTask = new ProgressBarTask(taskManager, UUID.randomUUID().toString(), title);
    taskManager.addTask(newTask);

    return newTask;
  }

  /**
   * Sets the output listener for process output.
   *
   * @param outputListener the output listener
   */
  public void setOutputListener(OutputListener outputListener) {
    this.outputListener = outputListener;
  }

  /**
   * @return the output listener
   */
  public OutputListener getOutputListener() {
    return this.outputListener;
  }

  @Override
  public ProcessContext newProcess() {
    ProcessContext processContext = super.newProcess();
    if (this.outputListener != null) {
      processContext.setOutputListener(this.outputListener);
    }
    return processContext;
  }
}
